--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<header class="grid-container">
 		<div class="logo-image">
-			<a href="https://eu.udacity.com/" target="_blank"><img src="C:\Users\LENOVO\Desktop\P1\img\udacity.png" alt="Udacity logo"></a>
+			<a href="https://eu.udacity.com/" target="_blank"><img src="img\udacity.png" alt="Udacity logo"></a>
 		</div>
 		<div class="header-text">
 			<h1>Ebtihaj Alrajeh</h1>
@@ -24,24 +24,24 @@
 		<!-- For Jumbotron, I've used "div" element instead of "section" as using "section" tag without "h1-h6" tag(s) throws a warning in the HTML validator" -->
 		<div class="pic1-section">
 			<figure class="P1-img">
-				<img src="C:\Users\LENOVO\Desktop\P1\img\pic1.jpg" alt="This is home page">
+				<img src="img\pic1.jpg" alt="This is home page">
 			</figure>
 		</div>
 
 		<section class="main-content">
 			<h2>Building Process</h2>
 			<div class="portfolio-section">
-				<img class="portfolio-img" src="C:\Users\LENOVO\Desktop\P1\img\pic2.jpg" alt="First">
+				<img class="portfolio-img" src="img\pic2.jpg" alt="First">
 				<h3>PlAN</h3>oo
 				<p class="portfolio-link"><a href="#">Going To</a></p>
 			</div>
 			<div class="portfolio-section">
-				<img class="portfolio-img" src="C:\Users\LENOVO\Desktop\P1\img\pic3.jpg" alt="Second">
+				<img class="portfolio-img" src="img\pic3.jpg" alt="Second">
 				<h3>Build Website</h3>
 				<p class="portfolio-link"><a href="#">Programming</a></p>
 			</div>
 			<div class="portfolio-section">
-				<img class="portfolio-img" src="C:\Users\LENOVO\Desktop\P1\img\pic4.jpg" alt="Three">
+				<img class="portfolio-img" src="img\pic4.jpg" alt="Three">
 				<h3>Test Website</h3>
 				<p class="portfolio-link"><a href="#">Done</a></p>
 			</div>
@@ -52,7 +52,7 @@
 	<footer>
 		<p>Udacity Front-End Web Developer Nanodegree</p>
 		<p>Project: Build a Portfolio Site, 2019 by Ebtihaj Alrajeh</p>
-		<span class="octocat-icon"><a href="https://github.com/Ebtihaj1995" target="_blank"><img src="C:\Users\LENOVO\Desktop\P1\img\GitHub.png" alt="Github icon"></a></span>
+		<span class="octocat-icon"><a href="https://github.com/Ebtihaj1995" target="_blank"><img src="img\GitHub.png" alt="Github icon"></a></span>
 	</footer>
 
 
