--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<header class="grid-container">
 		<div class="logo-image">
-			<a href="https://eu.udacity.com/" target="_blank"><img src="img\udacity.png" alt="Udacity logo"></a>
+			<a href="https://eu.udacity.com/" target="_blank"><img src="img/udacity.png" alt="Udacity logo"></a>
 		</div>
 		<div class="header-text">
 			<h1>Ebtihaj Alrajeh</h1>
@@ -24,7 +24,7 @@
 		<!-- For Jumbotron, I've used "div" element instead of "section" as using "section" tag without "h1-h6" tag(s) throws a warning in the HTML validator" -->
 		<div class="pic1-section">
 			<figure class="P1-img">
-				<img src="img\pic1.jpg" alt="This is home page">
+				<img src="img/pic1.jpg" alt="This is home page">
 			</figure>
 		</div>
 
