--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
 		<section class="main-content">
 			<h2>Building Process</h2>
 			<div class="portfolio-section">
-				<img class="portfolio-img" src="img\pic2.jpg" alt="First">
+				<img class="portfolio-img" src="img/pic2.jpg" alt="First">
 				<h3>PlAN</h3>oo
 				<p class="portfolio-link"><a href="#">Going To</a></p>
 			</div>
 			<div class="portfolio-section">
-				<img class="portfolio-img" src="img\pic3.jpg" alt="Second">
+				<img class="portfolio-img" src="img/pic3.jpg" alt="Second">
 				<h3>Build Website</h3>
 				<p class="portfolio-link"><a href="#">Programming</a></p>
 			</div>
 			<div class="portfolio-section">
-				<img class="portfolio-img" src="img\pic4.jpg" alt="Three">
+				<img class="portfolio-img" src="img/pic4.jpg" alt="Three">
 				<h3>Test Website</h3>
 				<p class="portfolio-link"><a href="#">Done</a></p>
 			</div>
@@ -52,7 +52,7 @@
 	<footer>
 		<p>Udacity Front-End Web Developer Nanodegree</p>
 		<p>Project: Build a Portfolio Site, 2019 by Ebtihaj Alrajeh</p>
-		<span class="octocat-icon"><a href="https://github.com/Ebtihaj1995" target="_blank"><img src="img\GitHub.png" alt="Github icon"></a></span>
+		<span class="octocat-icon"><a href="https://github.com/Ebtihaj1995" target="_blank"><img src="img/GitHub.png" alt="Github icon"></a></span>
 	</footer>
 
 
