--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<header class="grid-container">
 		<div class="logo-image">
-			<a href="https://eu.udacity.com/" target="_blank"><img src="img/udacity.png" alt="Udacity logo"></a>
+			<a href="https://eu.udacity.com/" target="_blank"><img src="img\udacity.png" alt="Udacity logo"></a>
 		</div>
 		<div class="header-text">
 			<h1>Ebtihaj Alrajeh</h1>
