--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<p class="portfolio-link"><a href="#">Programming</a></p>
 			</div>
 			<div class="portfolio-section">
-				<img class="portfolio-img" src="img/pic4.jpg" alt="Three">
+				<img class="portfolio-img" src="img/pic4.jpg" alt="Third">
 				<h3>Test Website</h3>
 				<p class="portfolio-link"><a href="#">Done</a></p>
 			</div>
